fix: resolve UI bugs and add admin hard-delete for auctions    - ChangePasswordController: fix status code mismatch (server returns 204,     client was checking 200) causing success branch to never execute; add     setManaged(true/false) to showStatus/hideStatus so label is visible in     VBox layout; auto-logout via Timeline after 3 seconds on success    - DepositController: remove knownStatuses.clear() on navigation so     status changes that occur while user is on another screen are detected     on return; loadHistory() now passes notify=true when prior state exists    - AuctionListController: enable cancel button for RUNNING auctions     (previously only OPEN); rename isOpen → isCancelable    - AuctionService.delete(): allow SELLER to cancel RUNNING auctions in     addition to OPEN    - AuctionDetailController: stop countdown and show "Đã kết thúc" when     status is CANCELED/FINISHED/PAID instead of continuing to tick down    - AdminPanelController: add "Xóa" button (hard delete) alongside "Hủy"     (soft cancel); reduce deposit/password-reset refresh from 15s to 5s    - AuctionDao: add hardDelete() — deletes auto_bid_configs and     bid_transactions in same transaction before removing auction row to     satisfy FK constraints without CASCADE    - AuctionService: add hardDelete() called by new admin-only endpoint     DELETE /api/admin/auctions/{id}    - AuctionDetailController: reduce balance poll from 15s to 5s for faster     deposit-approval notification