@@ -3,6 +3,7 @@ package com.auction.ui.controller;
 import com.auction.ui.util.Navigable;
 import com.auction.ui.util.SceneManager;
 import com.auction.util.RestClient;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.math.BigDecimal;
 import java.net.http.HttpResponse;
 import java.text.NumberFormat;
@@ -18,13 +19,14 @@ import org.slf4j.LoggerFactory;
 /**
  * Controller cho màn hình hồ sơ cá nhân (profile.fxml).
  *
- * <p>Hiển thị thông tin tài khoản: username, role, số dư (BIDDER/SELLER).
- * Cung cấp điều hướng đến đổi mật khẩu, nạp tiền (BIDDER), đăng xuất.
+ * <p>Hiển thị thông tin tài khoản: username, role, số dư (BIDDER/SELLER). Cung cấp điều hướng đến
+ * đổi mật khẩu, nạp tiền (BIDDER), đăng xuất.
  */
 public class ProfileController implements Navigable {
 
   private static final Logger LOGGER = LoggerFactory.getLogger(ProfileController.class);
-  private static final NumberFormat VND = NumberFormat.getCurrencyInstance(new Locale("vi", "VN"));
+  private static final ObjectMapper MAPPER = new ObjectMapper();
+  private static final NumberFormat VND = NumberFormat.getCurrencyInstance(Locale.of("vi", "VN"));
 
   @FXML private Label usernameLabel;
   @FXML private Label roleLabel;
@@ -91,16 +93,17 @@ public class ProfileController implements Navigable {
               try {
                 HttpResponse<String> response = RestClient.get("/api/users/me");
                 if (response.statusCode() == 200) {
-                  var mapper = new com.fasterxml.jackson.databind.ObjectMapper();
-                  var node = mapper.readTree(response.body());
-                  BigDecimal balance = node.has("balance") && !node.get("balance").isNull()
-                      ? node.get("balance").decimalValue()
-                      : BigDecimal.ZERO;
-                  Platform.runLater(() -> {
-                    if (profileBalanceLabel != null) {
-                      profileBalanceLabel.setText(VND.format(balance));
-                    }
-                  });
+                  var node = MAPPER.readTree(response.body());
+                  BigDecimal balance =
+                      node.has("balance") && !node.get("balance").isNull()
+                          ? node.get("balance").decimalValue()
+                          : BigDecimal.ZERO;
+                  Platform.runLater(
+                      () -> {
+                        if (profileBalanceLabel != null) {
+                          profileBalanceLabel.setText(VND.format(balance));
+                        }
+                      });
                 }
               } catch (Exception e) {
                 LOGGER.error("Không thể load số dư profile", e);
